Fixes webview's white box in scrollbar corners

--- a/src/webviews/apps/scss/main.scss
+++ b/src/webviews/apps/scss/main.scss
@@ -1170,4 +1170,8 @@ ul {
     }
 }
 
+::-webkit-scrollbar-corner {
+    background-color: transparent !important;
+}
+
 @import 'popup';
